multiple marker with click event enable

--- a/index.html
+++ b/index.html
@@ -11,20 +11,44 @@
 
 
     <script>
-        var map = L.map('map');
+var map = L.map('map');
 
 L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 18,
     id: 'mapbox.streets'
 }).addTo(map);
 
+
+/*
+var LeafIcon = L.Icon.extend({
+						options: {
+                            iconUrl: 'marker_icon1.png',
+							iconSize:     [20, 18],//width,height
+							shadowSize:   [50, 64],
+							iconAnchor:   [9, 15],//margin-left in(-),height-top in(-)
+							shadowAnchor: [4, 62],
+							popupAnchor:  [-3, -76]
+						}
+					});
+*/
+var myIcon = L.icon({
+    iconUrl: 'marker_icon1.png',
+    iconSize:     [34, 42],//width,height
+    iconAnchor:   [9, 15],//margin-left in(-),height-top in(-)
+    popupAnchor: [-3, -76],
+    shadowSize:   [50, 64],
+    shadowAnchor: [4, 62]
+});
+
 function onLocationFound(e) {
     console.log(e.latlng);
     var radius = e.accuracy / 2;
 
     L.marker(e.latlng).addTo(map).bindPopup("You are within " + radius + " meters from this point").openPopup();;
-    L.marker({lat:23.777394084459527,lng:90.4107860658638}).addTo(map);
-
+    L.marker({lat:23.777394084459527,lng:90.4107860658638}, {icon: myIcon}).addTo(map).on("click", function(e){
+                        alert("Icon Clicked");                
+                    });;
+// L.marker([50.505, 30.57], {icon: myIcon}).addTo(map);
     L.circle(e.latlng, 18).addTo(map);
 }
 
